--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start:dev": "NODE_ENV=dev nest start --watch",
     "start:prod": "node dist/main",
     "test": "jest",
-    "test:cov": "NODE_ENV=test jest --coverage",
-    "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:watch": "jest --watch"
   },
   "jest": {
     "collectCoverageFrom": [
