--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "npx eslint . --ext ts,json",
-    "lint:fix": "npx eslint . --ext ts,json --fix",
-    "lint:quiet": "npx eslint . --ext ts,json --quiet",
+    "lint": "npx eslint . \"**/*.{ts,json}\"",
+    "lint:fix": "npx eslint . \"**/*.{ts,json}\" --fix",
+    "lint:quiet": "npx eslint . \"**/*.{ts,json}\" --quiet",
     "pre-commit": "npx lint-staged",
     "pre-commit-msg": "npx --no -- commitlint --edit ${1}",
     "pre-push": "npx jest",
@@ -63,7 +63,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "zod": "^3.23.5"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -91,7 +91,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0"
   },
   "engines": {
     "node": ">=22.1.0",
