--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "npx eslint . \"**/*.{ts,json}\"",
-    "lint:fix": "npx eslint . \"**/*.{ts,json}\" --fix",
-    "lint:quiet": "npx eslint . \"**/*.{ts,json}\" --quiet",
+    "lint": "npx eslint . \"**/*.{mjs,ts,json}\"",
+    "lint:fix": "npx eslint . \"**/*.{mjs,ts,json}\" --fix",
+    "lint:quiet": "npx eslint . \"**/*.{mjs,ts,json}\" --quiet",
     "lint:staged": "npx eslint . --fix",
     "pre-commit": "npx lint-staged",
     "pre-commit-msg": "npx --no -- commitlint --edit ${1}",
@@ -58,13 +58,13 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3",
+    "mongoose": "^8.3.5",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -74,11 +74,11 @@
     "@nestjs/testing": "^10.3.8",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.42.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.13",
+    "@typescript-eslint/parser": "^8.0.0-alpha.0",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-prettier": "^5.1.3",
@@ -93,7 +93,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0"
+    "typescript-eslint": "^8.0.0-alpha.13"
   },
   "engines": {
     "node": ">=22.1.0",
